@startuml
left to right direction
hide circle
hide empty members

skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 140
skinparam ranksep 170
skinparam minClassWidth 200
skinparam defaultFontName Arial

skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #2C3E50
  FontColor #1F2937
  FontSize 16
  BorderThickness 1.6
  RoundCorner 10
}

skinparam package {
  BackgroundColor #F8FAFC
  BorderColor #CBD5E1
  FontColor #334155
}

package "Nhom 1: Nguoi dung va doanh nghiep" {
  entity TaiKhoan
  entity UngVien
  entity NhaTuyenDung
  entity CongTy
}

package "Nhom 2: Tin tuyen dung va ho so" {
  entity TinTuyenDung
  entity HoSoCv
  entity ChiTietCv
  entity KyNang
  entity ChiTietKyNangCv
  entity ChiTietKyNangTin
}

package "Nhom 3: Ung tuyen va phong van" {
  entity DonUngTuyen
  entity LichSuTrangThai
  entity LichPhongVan
  entity ThongBao
}

TaiKhoan -[hidden]right-> TinTuyenDung
TinTuyenDung -[hidden]right-> DonUngTuyen

' User and company
TaiKhoan ||--o| UngVien : "1-1"
TaiKhoan ||--o| NhaTuyenDung : "1-1"
CongTy ||--o{ NhaTuyenDung : "1-N"
CongTy ||--o{ TinTuyenDung : "1-N"
NhaTuyenDung ||--o{ TinTuyenDung : "1-N"

' CV and skills
UngVien ||--o{ HoSoCv : "1-N"
HoSoCv ||--o{ ChiTietCv : "1-N"
HoSoCv ||--o{ ChiTietKyNangCv : "1-N"
KyNang ||--o{ ChiTietKyNangCv : "1-N"
TinTuyenDung ||--o{ ChiTietKyNangTin : "1-N"
KyNang ||--o{ ChiTietKyNangTin : "1-N"

' Application pipeline
TinTuyenDung ||--o{ DonUngTuyen : "1-N"
HoSoCv ||--o{ DonUngTuyen : "1-N"
DonUngTuyen ||--o{ LichSuTrangThai : "1-N"
DonUngTuyen ||--o{ LichPhongVan : "1-N"
NhaTuyenDung ||--o{ LichPhongVan : "1-N"
TaiKhoan ||--o{ LichSuTrangThai : "1-N"
TaiKhoan ||--o{ ThongBao : "1-N"

note bottom
ERD_Report.puml chi giu cac bang cot loi nghiep vu tuyen dung.
Da an cac bang ky thuat pending/token va cac bang collection enum.
end note

@enduml
